68. Add Player Score

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,10 +63,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Ball.cs" />
-    <Compile Include="Assets\Block.cs" />
-    <Compile Include="Assets\Paddle.cs" />
+    <Compile Include="Assets\Scripts\Ball.cs" />
+    <Compile Include="Assets\Scripts\Block.cs" />
+    <Compile Include="Assets\Scripts\GameStatus.cs" />
+    <Compile Include="Assets\Scripts\Level.cs" />
     <Compile Include="Assets\Scripts\LoseCollider.cs" />
+    <Compile Include="Assets\Scripts\Paddle.cs" />
     <Compile Include="Assets\Scripts\SceneLoader.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/Mikołaj/Desktop/Repositories/Block_Breaker/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
